--- a/src/views/listUser.ejs
+++ b/src/views/listUser.ejs
@@ -17,7 +17,7 @@
             <tr>
                 <th scope="col">STT</th>
                 <th scope="col">email</th>
-                <th scope="col">password</th>
+
                 <th scope="col">username</th>
                 <th scope="col">action</th>
             </tr>
@@ -31,15 +31,15 @@
                     <td>
                         <%= item.email %>
                     </td>
-                    <td>
-                        <%= item.password %>
-                    </td>
+
                     <td>
                         <%= item.username %>
                     </td>
                     <td>
-                        <a href=""><i class="fa-solid fa-trash"></i></a> | <a href=""><i
-                                class="fa-solid fa-pen-to-square"></i></a>
+                        <a href=""><i class="fa-solid fa-pen-to-square"></i></a> |
+                        <form action="/delete-user/<%= item.id%>" method="post">
+                            <button><i class="fa-solid fa-trash"></i></button>
+                        </form>
                     </td>
                 </tr>
 
